add: 04. List Implication learning and simple practice

--- a/md/04.List_Implication.md
+++ b/md/04.List_Implication.md
@@ -9,3 +9,6 @@ nums = [i for i in range(5)]
 nums = [i for i in range(10) if i % 2 == 0]
 ```
 
+## Let's Practice
+[04.List_Implication.py](../Chapter2/04.List_Implication.py)  
+[04.List_Implication_Practice.py](../Chapter2/04.List_Implication_Practice.py)
