--- a/md/05.Allocation_Copy.md
+++ b/md/05.Allocation_Copy.md
@@ -33,3 +33,6 @@ x = [[1, 2], [3, 4, 5]]
 import copy
 y = copy.deepcopy(x)
 ```
+
+## Let's Practice
+[Allocation_Copy](../Chapter2/05.Allocation_Copy.py)
