add: 05. Allocation & Copy learning and simple practice

--- a/md/05.Allocation_Copy.md
+++ b/md/05.Allocation_Copy.md
@@ -35,4 +35,5 @@ y = copy.deepcopy(x)
 ```
 
 ## Let's Practice
-[Allocation_Copy](../Chapter2/05.Allocation_Copy.py)
+[Allocation_Copy](../Chapter2/05.Allocation_Copy.py)  
+[Allocation_Copy_Practice](../Chapter2/05.Allocation_Copy_Practice.py)
