--- a/md/06.Function_parameter.md
+++ b/md/06.Function_parameter.md
@@ -21,8 +21,29 @@ def post_info(title, content="내용없음"):
 ```python
 post_info(content="없어요", title="여자친구 만드는 방법")
 ```
-## Lamda
 
-## map
+---
 
-## filter
+## 가변 매개 변수
+흔히들 (*args, **kargs)라는 단어를 코드를 작성하다보면 많이 보게 되는데 이들은 가변 매개 변수라는 이름으로 정의된다.  
+가변 매개변수란, **개수가 정해지지 않은 매개변수**를 의미한다.
+
+
+
+### 위치 가변 매개 변수
+매개변수 앞에 *(asta)가 붙으며 튜플형태를 띈다.
+```python
+def print_plus(*args):
+    for arg in args:
+        print(arg)
+
+print_plus("HI","Plus", "HyeonjinKK")
+```
+
+### 키워드 가변 매개변수
+매개변수 앞에 **가 붙으며 딕셔너리형태의 자료를 받아온다.
+```python
+def print_dict(**kwargs):
+    for key, value in kwargs.items():
+        print(f"{key} : {value}")
+```
