add: 06. Lamda function learning and simple practice

--- a/md/06.Function_parameter.md
+++ b/md/06.Function_parameter.md
@@ -47,3 +47,24 @@ def print_dict(**kwargs):
     for key, value in kwargs.items():
         print(f"{key} : {value}")
 ```
+
+## Lamda
+이름을 지을 필요도 없는 간단한 형태의 함수이며 다른 함수의 인자(arg)로 넣을 수 있다.
+코드가 간결해지고, 메모리가 절약된다.
+
+```python
+def minus_one(a):
+    return a - 1
+
+minus_one(10)
+
+lambda a: a -1
+
+(lambda  a: a-1)(10)
+```
+
+- 람다 함수 정의 방법
+```python
+var = lambda a: True if a > 0 else False
+var(4)
+```
