add: 06. Map & Filter function learning and simple practice

--- a/md/06.Function_parameter.md
+++ b/md/06.Function_parameter.md
@@ -68,3 +68,33 @@ lambda a: a -1
 var = lambda a: True if a > 0 else False
 var(4)
 ```
+
+## MAP
+### map and Lamda
+`map(함수, 순서가 있는 자료형)`
+```python
+map(int, ['3', '4', '5', '6'])
+
+# 3, 4, 5, 6의 각각의 데이터들이 int convert 후 map object가 된다.(3, 4, 5, 6)
+
+items = [" 로지텍 마우스", " 애플 키보드"]
+def strip_all(x):
+    return x.strip()
+
+items = list(map(strip_all, items))
+
+# Lamda 활용
+func_test = lambda x:x.strip
+items = list(map(func_test, items))
+```
+
+## FILTER
+`filter(함수, 순서가 있는 자료형)`
+```python
+# 리스트에서 길이가 3이하인 문자만 필터링
+fruits = ["apple", "banana", "melon", "watermelon", "asd"]
+
+def word_check(x):
+    return len(x) <=3
+result = list(filter(word_check, fruits))
+```
