add: 08. Attributes learning and simple practice

--- a/md/07.Class_Object.md
+++ b/md/07.Class_Object.md
@@ -2,6 +2,9 @@
 클래스와 객체
 
 ## 절차 지향 vs 객체 지향
+
+[Class & Objects](../Chapter4/07.Class_Object.py)
+
 절차 지향 프로그래밍이란 **어떤 순서로 처리할 것인가**에 초점을 맞추는 프로그래밍이다.  
 객체 지향 프로그래밍이란 객체가 중심이 되고, 객체를 정의하고 객체 간 **상호작용**에 초점을 맞춘다.  
 프로그램의 규모에 따라 절차와 객체 지향으로 프로그래밍한다.
@@ -14,3 +17,16 @@ class Unit:
 # 객체 만들기
 zealot = Unit()
 ```
+
+## 속성
+
+[Attributes](../Chapter4/08.Attr.py)
+
+### 인스턴스 속성
+- 객체마다 다르게 가지는 속성
+
+### 클래스 속성
+- 모든 객체가 공유하는 속성
+
+### 비공개 속성
+- 클래스 내에서만 접근 가능한 속성
