add: SQL_DDL Learning & practice

--- a/md/11.SQL_DDL.md
+++ b/md/11.SQL_DDL.md
@@ -20,3 +20,33 @@
       2. not null - 항상 데이터가 비어있지 않아야 함.
       3. default - 기본 값
       4. unique - 유일한 값
+
+```sql
+
+-- CREATE TABLE
+CREATE TABLE post(
+    id integer primary key autoincrement ,
+    title text not null default '제목없음',
+    content text default '내용없음'
+);
+
+
+CREATE TABLE user(
+    id integer primary key autoincrement ,
+    nickname text unique
+);
+
+-- DROP TABLE
+DROP TABLE  post;
+
+-- ALTER TABLE NAME
+ALTER TABLE post RENAME TO board;
+
+-- ALTER ADD COLUMN
+ALTER TABLE board ADD COLUMN reg_date_1 text;
+
+-- ALTER COLUMN RENAME
+ALTER TABLE board RENAME reg_date_1 TO reg_date;
+
+
+```
