--- a/md/14.Introduce_Regular_Expression.md
+++ b/md/14.Introduce_Regular_Expression.md
@@ -1,1 +1,13 @@
 # Regular Expression
+
+## 왜 사용하나?
+> 1. 문자열에서 특정 패턴을 찾고 싶을 때 사용한다.
+> 2. 유효성 검증
+## 장점과 단점
+> - 장점
+>   - 문자열 추출, 유효성 검사에서 유용하게 쓰일 수 있다.
+>   - 거의 모든 언어에서 지원(범용성이 높다.)
+> - 단점
+>   - 가독성이 좋지 못하기에 유지보수가 힘들다.
+
+> ### 정규 표현식에도 장점과 단점이 존재하기에 꼭 필요한 상황 시에 활용하자.
